# fortiedr

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  config.py  example.py  main.py  pyproject.toml  requirements.txt  setup.py
config/: config.ini  credentials.ini.default
fortiedr/: __init__.py  api_parameters.json  auth.py  connector.py  fortiedr.py
lib/: auth.py  connector.py  fortiedr_admin.py  fortiedr_collectors.py  fortiedr_users.py
